Fix overflow

--- a/app/assets/stylesheets/default.scss
+++ b/app/assets/stylesheets/default.scss
@@ -23,8 +23,7 @@ li {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  overflow-y: scroll;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 ul {
   list-style: none;
